--- a/socketio/web/index.html
+++ b/socketio/web/index.html
@@ -28,5 +28,17 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"></script>
+<script>
+  const socket = io('http://localhost:3000', {
+    transports: ['websocket'],
+  });
+  socket.on('chat message', (mess) => { // nhận
+    $('.toast-body').text(mess.content)
+    $('.me-auto').text(mess.title)
+    const toastLiveExample = document.getElementById('liveToast')
+    const toast = new bootstrap.Toast(toastLiveExample)
+    toast.show()
+  });
+</script>
 
 </html>
